crates/rattler_solve/src/snapshots/rattler_solve__test_libsolv__solve_python.snap
---
source: crates/rattler_solve/src/lib.rs
assertion_line: 185
expression: pkgs
---
- python 3.9.13 h9a8a25e_0_cpython
- libnsl 2.0.0 h7f98852_0
- tk 8.6.12 h27826a3_0
- libgcc-ng 12.1.0 h8d9b700_16
- _libgcc_mutex 0.1 conda_forge
- _openmp_mutex 4.5 1_llvm
- libzlib 1.2.12 h166bdaf_1
- bzip2 1.0.8 h7f98852_4
- libffi 3.4.2 h9c3ff4c_2
- xz 5.2.6 h166bdaf_0
- ld_impl_linux-64 2.36.1 hea4e1c9_0
- ncurses 6.3 h9c3ff4c_0
- libuuid 2.32.1 h7f98852_1000
- sqlite 3.39.2 h4ff8645_0
- zlib 1.2.12 h166bdaf_1
- readline 8.1.2 h0f457ee_0
- openssl 1.1.1q h166bdaf_0
- tzdata 2021e he74cb21_0
- llvm-openmp 14.0.4 he0ac6c6_0
- libstdcxx-ng 12.1.0 ha89aaad_16
- ca-certificates 2022.6.15 ha878542_0

